--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <!-- Footer -->
     <footer class="bg-primary text-white text-center py-4">
-        <p>&copy; 2024 Pediatri Bölümü Web Sitesi. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Pediatri Bölümü Web Sitesi. Tüm hakları saklıdır<br>SHAHRYAR HAYATI.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
